--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <h1>Hola mundo</h1>
 <p>Este es un sitio web malicoso</p>
- <a href="unnamed.jpg">Click para descargar</a>
+ <a href="unnamed.jpg" download="dog">Click para descargar</a>
+
 
 </body>
 </html> 
